# tg-bot

./: .dockerignore  .gitignore  Dockerfile  README.MD  errors.txt  pyproject.toml
tg_bot/: bot-aiogram.py  my_bot.session
tg_bot_logging/: bot_with_logging  main_bot  readme.md  user_logger.py
